# ffmpeg-android

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/ffmpeg/: MainActivity.java
ffmpeg/ffmpegsample/: build.gradle
ffmpeg/ffmpegsample/src/androidTest/java/com/example/ffmpegsample/: ExampleInstrumentedTest.java
ffmpeg/ffmpegsample/src/main/: AndroidManifest.xml
ffmpeg/ffmpegsample/src/main/java/com/example/ffmpegsample/: FileUtils.java  MainActivity.java  SoundPoolManager.java
ffmpeg/ffmpegsample/src/main/res/layout/: activity_main.xml
ffmpeg/ffmpegsample/src/test/java/com/example/ffmpegsample/: ExampleUnitTest.java
ffmpeg/libffmpeg/: CMakeLists.txt  CMakeLists2.txt  CMakeLists3.txt  build.gradle
ffmpeg/libffmpeg/src/androidTest/java/com/example/libffmpeg/: ExampleInstrumentedTest.java
ffmpeg/libffmpeg/src/main/cpp/ffmpegplay/include/: ffmpeg_player.h
ffmpeg/libffmpeg/src/main/cpp/include/: base.h
ffmpeg/libffmpeg/src/main/cpp/source/: __jni_onload.cpp  ffmpeg_register_jni.cpp
ffmpeg/libffmpeg/src/main/java/org/ffmpeg/utils/: FFmpegUtils.java  StreamCallback.java
gradle/wrapper/: gradle-wrapper.properties
libyuvdemo/YuvLibrary/: CMakeLists.txt  build.gradle
libyuvdemo/YuvLibrary/src/androidTest/java/com/example/yuvlibrary/: ExampleInstrumentedTest.java
libyuvdemo/YuvLibrary/src/main/: AndroidManifest.xml
libyuvdemo/YuvLibrary/src/main/cpp/: _jni_onload.cpp  libyuv_utils.cpp
libyuvdemo/YuvLibrary/src/main/cpp/include/: base.h
libyuvdemo/YuvLibrary/src/main/java/org/libyuv/utils/: LibYuvUtils.java
libyuvdemo/YuvLibrary/src/test/java/com/example/yuvlibrary/: ExampleUnitTest.java
libyuvdemo/yuvsample/: build.gradle
libyuvdemo/yuvsample/src/androidTest/java/com/example/yuvsample/: ExampleInstrumentedTest.java
libyuvdemo/yuvsample/src/main/: AndroidManifest.xml
libyuvdemo/yuvsample/src/main/assets/src/: src.nv21
libyuvdemo/yuvsample/src/main/java/com/example/yuvsample/: FileUtils.java  IOUtils.java  MainActivity.java  PermissionsUtils.java
libyuvdemo/yuvsample/src/main/res/layout/: activity_main.xml
libyuvdemo/yuvsample/src/main/res/values/: strings.xml
libyuvdemo/yuvsample/src/test/java/com/example/yuvsample/: ExampleUnitTest.java
